<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/_5sdp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@mipmap/ic_main_login_bg">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/rounded_corner_main"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/cpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/rounded_corner_edittext_login"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_3sdp">

            <EditText
                android:id="@+id/edOldPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:nextFocusDown="@+id/edNewPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/mainPageBg2"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/icinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/fa_info_circle"
                android:textColor="@color/info_blue"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_corner_edittext_login"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_3sdp">

            <EditText
                android:id="@+id/edNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@android:color/transparent"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:nextFocusDown="@+id/edNewConfirmPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/mainPageBg2"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_corner_edittext_login"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_3sdp">

            <EditText
                android:id="@+id/edNewConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@android:color/transparent"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:nextFocusDown="@+id/edPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/mainPageBg2"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn_bg"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn_bg"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="@string/change"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>