<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_5sdp"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    android:paddingTop="@dimen/_5sdp"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/scheduleList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/new_bg_blank"
        android:scrollbars="vertical"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/llTimea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEnding"
            android:layout_width="wrap_content"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/schedule_sndingAt"
            android:textSize="@dimen/_14sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/rounded_corner_ending_at_time"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEndTime"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sc_time" />

            <TextView
                android:id="@+id/tvDown"
                android:background="@drawable/rounded_corner_drop_down"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18sdp"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/fa_caret_down" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/rounded_corner_border_new_blue"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"
        android:visibility="visible"
        android:text="@string/save_sc"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

</LinearLayout>