<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_bg_blank"
    tools:context="com.breakbuddy.UI.AddContactActivity">

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_6sdp"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:paddingTop="@dimen/_6sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_edittext_login"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingRight="@dimen/_3sdp">

            <EditText
                android:id="@+id/edSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_27sdp"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:lines="1"
                android:nextFocusDown="@+id/edPassword"
                android:paddingLeft="@dimen/_8sdp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/mainPageBg2"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llSearch"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBBMyFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSearch"
                android:background="@color/sch_list_gr1"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/bb_my_contact"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlBBContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBBMyFriends"
                android:background="@color/new_bg_blank"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAddByPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlBBContacts"
                android:background="@color/sch_list_gr1"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/add_by_phone_no"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAddByPhone"
                android:background="@color/new_bg_blank"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvNoConatcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_150sdp"
                android:foregroundGravity="center"
                android:text="@string/no_contacts"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
